# transformer-aiayn

./: .gitignore  Dockerfile  README.md  data.py  model.py  pyproject.toml  tpu_test.py  train.py  transformer-aiayn.ipynb  xla_notes.txt
aiayn/: bleu_tools.py  data.py  eval.py  funcs.py  hparams.py  jutils.py  model.py  model_bck.py  pack.py  pause.py  pick_data.py  preprocess.py  report.py  sample.py  state.py  train.py  train_bck.py  utils.py
assets/: all.html
notebooks/: jax_aiayn.ipynb
notebooks/.ipynb_checkpoints/: jax_aiayn-checkpoint.ipynb
scripts/: eval.py  text_page.py
tests/: checkpoint.py  custom_vjp.py  data_checkpointing.py  download_data.py  fori_loop.py  gather_test.py  get_pytree_structure.py  grad_take.py  grad_test.py  grad_tests.py  haiku_shared_param.py  hf_tokenizer_test.py  jax_lsof.txt  layernorm_leakage.py  memory_test.py  model_structure.py  multi_processing_exceptions.py  nan_grad_test.py  nan_trap.py  softmax_test.py  test_dataset.py  test_ipc.py  test_jax_tf_compatibility.py  test_load_save.py  test_mp_signals.py  test_pack.py  test_pickle.py  test_read_dataset.py  test_restore.py  tf_lsof.txt  tokenizer_test.py  total_params.py  tpu_test.py
