[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "transformer-aiayn"
version = "0.1.0"
description = "Implementation of the Transformer from the paper 'Attention is All You Need'"
authors = [{name="Henry Bigelow", email="hrbigelow@gmail.com"}]
dependencies = [
  "torch>=2.0",
  "datasets>=2.12.0",
  "transformers",
  "fire",
  "numpy",
  "psutil",
  "google-cloud-pubsub",
  "streamvis @ git+https://github.com/hrbigelow/streamvis.git"
]

[tool.setuptools]
packages = ["aiayn"]

