[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "transformer-aiayn"
version = "0.1.0"
description = "Implementation of the Transformer from the paper 'Attention is All You Need'"
authors = [{name="Henry Bigelow", email="hrbigelow@gmail.com"}]
dependencies = [
  # "transformers",
  "tokenizers",
  "datasets",
  "flax",
  "jax",
  "optax",
  # this doesn't jibe with Colab
  # "orbax-checkpoint==0.1.1",
  "tensorflow",
  "tensorflow-datasets>=4.9.2",
  "dm-haiku @ git+https://github.com/deepmind/dm-haiku.git@v0.0.9",
  "fire",
  "numpy",
  "psutil",
  "google-cloud-pubsub",
  "streamvis @ git+https://github.com/hrbigelow/streamvis.git"
]

[tool.setuptools]
packages = ["aiayn"]

